--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "winston": "^3.17.0",
+    "zod": "^3.25.67"
   }
 }
