--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -36,6 +36,6 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "winston": "^3.17.0",
-    "zod": "^3.25.67"
+    "zod": "^4.0.14"
   }
 }
